--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="container">
             <div class="row justify-content-between">
             <div class="col-lg-5 order-lg-2 ">
-            <a href="#" class="service link  d-flex horizontal carousel-control-pre active" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="420" >
+            <a href="#" class="service link  d-flex horizontal carousel-control-pre active b" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="420" >
             <div class="service-icon color-1 mb-4 s1">
             <svg class="" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z">
@@ -209,7 +209,7 @@
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
             </div> 
             </a> 
-            <a href="#" class="service link horizontal d-flex carousel-control-pre" id="icon-2" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="430">
+            <a href="#" class="service link horizontal d-flex carousel-control-pre b" id="icon-2" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="430">
             <div class="service-icon color-2 mb-4 s2">
             <svg class="bi bi-arrow-repeat" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L2.5 8.207l1.646 1.647a.5.5 0 0 0 .708-.708l-2-2zm13-1a.5.5 0 0 0-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0 0-.708z"></path>
@@ -221,7 +221,7 @@
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
             </div> 
             </a> 
-            <a href="#" class="service link horizontal d-flex carousel-control-pre" data-bs-target="#carouselExampleIndicators"  data-bs-slide-to="2" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="440">
+            <a href="#" class="service link horizontal d-flex carousel-control-pre b" data-bs-target="#carouselExampleIndicators"  data-bs-slide-to="2" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="440">
             <div class="service-icon color-3 mb-4 s3">
             <svg class="bi bi-briefcase" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-6h-1v6a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-6H0v6z"></path>
@@ -233,7 +233,7 @@
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
             </div> 
             </a> 
-            <a href="#" class="service link horizontal d-flex carousel-control-pre" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="450">
+            <a href="#" class="service link horizontal d-flex carousel-control-pre b" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="450">
             <div class="service-icon color-4 mb-4 s4">
             <svg class="bi bi-collection" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M14.5 13.5h-13A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5zm-13 1A1.5 1.5 0 0 1 0 13V6a1.5 1.5 0 0 1 1.5-1.5h13A1.5 1.5 0 0 1 16 6v7a1.5 1.5 0 0 1-1.5 1.5h-13zM2 3a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11A.5.5 0 0 0 2 3zm2-2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7A.5.5 0 0 0 4 1z">
